--- a/main.html
+++ b/main.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -8,6 +10,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="myForm" method="POST">
+		<div>
+		<label for="name">Name*</label>
+		<input type="text" id="name" required></div>
+		<div>
+			<label for="email">Email*</label>
+		<input type="email" id="email" required>
+		</div>
+		<div>
+			<label for="gender">M*</label>
+		<input type="radio" id="gender" name="gender"required>
+			<label for="gender">F*</label>
+		<input type="radio" id="gender" name="gender"required>
+		</div>
+		<div>
+			<label for="cars">Car Brands</label>
+			<select name="car" id="cars">
+				<option>BMW</option>
+				<option>Audi</option>
+				<option>Mercedez</option>
+			</select>
+		</div>
+		<div>
+			<label for="age">Age</label>
+        <input type="number" id="age" min="0" required>
+		</div>
+		<div>
+			<label for="dob">DOB*</label>
+			<input type="date" id="dob" required>
+		</div>
+		<div>
+			<label for="password">Password*</label>
+			<input type="password" id="password" required>
+		</div>
+		
+			
+	<button type="submit">submit button</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
