--- a/main.html
+++ b/main.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 
-<!DOCTYPE html>
-
 <html>
 
 <head>
@@ -9,7 +7,6 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<form id="myForm" method="POST">
 		<div>
 		<label for="name">Name*</label>
@@ -33,12 +30,12 @@
 			</select>
 		</div>
 		<div>
-			<label for="age">Age</label>
-        <input type="number" id="age" min="0" required>
+			<label for="carage">Car Age</label>
+        <input type="number" id="carage" min="0" required>
 		</div>
 		<div>
-			<label for="dob">DOB*</label>
-			<input type="date" id="dob" required>
+			<label for="dop">Date of Purchase*</label>
+			<input type="date" id="dop" required>
 		</div>
 		<div>
 			<label for="password">Password*</label>
@@ -55,3 +52,4 @@
 </body>
 
 </html>
+
